Corrected spacing for user's avatar. Added avatar for Michael McCorbin

--- a/prototype/_sass/components/_item-selector.scss
+++ b/prototype/_sass/components/_item-selector.scss
@@ -69,6 +69,10 @@
                 transition: 0.4s border;
             }
 
+            &.user .follow{
+                padding-left: 4em;
+            }
+
             &.folder:after {
                 font-family: fontello;
                 content: '\e4a2';
